<resources>
    <string name="app_name" translatable="false">Hayi Submission 2</string>
    <string name="by_all">All</string>
    <string name="by_favorites">My Favorites</string>
    <string name="anime">Anime</string>
    <string name="settings">Settings</string>
    <string name="bahasa_indonesia" translatable="false">Bahasa Indonesia</string>
    <string name="english" translatable="false">English</string>
    <string name="change_language">Change Language</string>
    <string name="set_language">Set Language</string>
    <string name="back">Back</string>
    <string name="swipe_up_for_details">Swipe up for tontonans</string>
    <string name="the_anime">The Anime</string>
    <string name="desclaimer" translatable="false">© 2019 - hayi.nkm@gmail.com</string>
    <string name="title">Title</string>
    <string name="english_title">English Title</string>
    <string name="original_title">Original Title</string>
    <string name="series">Series</string>
    <string name="status">Status</string>
    <string name="premiere">Premiere</string>
    <string name="popularity_rank">Popularity Rank</string>
    <string name="voters">Voters</string>
    <string name="average_rating">Average Rating</string>
    <string name="age_rating">Age rating</string>
    <string name="colon" translatable="false">:</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="added_to_fav">%s added to favorites collection</string>
    <string name="remove_from_fav">%s removed from favorites</string>
</resources>
